# OSVC

./: .gitignore  CMakeLists.txt  README.md  exec.sh
src/: AudioManipulator.hpp  MatrixFader.hpp  NWCommon.hpp  TCPClient.cpp  TCPClient.hpp  TCPServer.cpp  TCPServer.hpp  UDPClient.cpp  UDPClient.hpp  UDPServer.cpp  UDPServer.hpp  buffers.hpp  main.cpp  main.h  memMappedFile.h  network.cpp  network.hpp  nwtest.cpp  plotter.py  rcom.cpp  remocon.h  rt_plot.py  rt_recv.py  sound_device.py  windowfuncs.py
