cmake_minimum_required(VERSION 3.12)
project(osvc)

add_executable(osvc src/main.cpp)
add_executable(remocon src/rcom.cpp)
add_library(NW STATIC src/network.cpp)
add_library(TCPSRV STATIC src/TCPServer.cpp)
add_library(TCPCLI STATIC src/TCPClient.cpp)
add_library(UDPSRV STATIC src/UDPServer.cpp)

find_package(PkgConfig)
pkg_check_modules(PORTAUDIO REQUIRED portaudio-2.0)
pkg_check_modules(RUBBERBAND REQUIRED rubberband)
#pkg_check_modules(JSON REQUIRED nlohmann_json)

#target_include_directories(osvc PUBLIC ${PORTAUDIO_INCLUDE_DIRS} ${RUBBERBAND_INCLUDE_DIRS} ${JSON_INCLUDE_DIRS})
target_include_directories(osvc PUBLIC ${PORTAUDIO_INCLUDE_DIRS} ${RUBBERBAND_INCLUDE_DIRS})

target_compile_options(osvc PUBLIC --std=c++17 -O3)
target_compile_options(remocon PUBLIC --std=c++17)
target_compile_options(NW PUBLIC --std=c++17 -O3)
target_compile_options(TCPSRV PUBLIC --std=c++17)
target_compile_options(TCPCLI PUBLIC --std=c++17)
target_compile_options(UDPSRV PUBLIC --std=c++17)

if(WIN32)
    target_link_libraries(osvc NW TCPSRV UDPSRV wsock32 ws2_32 ${PORTAUDIO_LIBRARIES} ${RUBBERBAND_LIBRARIES})
else()
    target_link_libraries(osvc NW TCPSRV UDPSRV ${PORTAUDIO_LIBRARIES} ${RUBBERBAND_LIBRARIES})
endif()

if(WIN32)
    target_link_libraries(remocon TCPCLI wsock32 ws2_32)
else()
    target_link_libraries(remocon TCPCLI)
endif()
